# ncaa-basketball-scraper

./: README.md  pyproject.toml  requirements.txt
espn_basketball/: espn.py  gui.py  matchup.py  matchup_gui.py  player.py  player_gui.py
ncaa_basketball/: espn.py  gui.py  matchup.py  matchup_gui.py  ncaa.py  play_by_play.py  play_by_play_gui.py  player.py  player_gui.py  util.py
